# Databricks_ELT_Medallion_Emision_SCTR

./: .gitignore  LoadBronze.ipynb  LoadGold.ipynb  LoadSilver.ipynb  README.md  databricks.yml  pyproject.toml
src/: utilities.py
